# nocap

./: .bumpversion.cfg  .gitattributes  .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  SLIDES.md  TALK_SCRIPT.md  pyproject.toml  setup.cfg  test_model.xml  tox.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: tests.yml
TRIPS_data/: All-instances-of-Genes-in-Escherichia-coli-K-12-substr.-MG1655.csv  TyrR_all_ancestors_graph_1_bin.gml  TyrR_all_ancestors_graph_3_bins.gml  tyrR_filtered.graphml
docs/plans/: 2026-06-26-csd-oset-rerun.md
docs/source/: cli.rst  conf.py  index.rst  installation.rst  usage.rst
example_notebooks/: cond_ind_test_ag.ipynb
notebooks/: ABCD_model.xml  ABCD_model_data.csv  ABCD_model_noisy_data.csv  ABCD_model_petrinet_w_priors.json  ATE_workflow.ipynb  EDA.ipynb  Ecoli_Identifiability_Analysis.ipynb  SCM_notebook.ipynb  SCM_notebook.py  TRIPS_notebook copy 2.ipynb  TRIPS_notebook copy.ipynb  TRIPS_notebook.ipynb  TRIP_chirho.ipynb  TRIP_pyro_notebook.ipynb  _schema.json  chirho_diffeqpy_for_grn.ipynb  cond_ind_test_ag.ipynb  ecoli_network_analysis.ipynb  fadR_eqns_and_params.txt  fadR_eqns_and_params_intervened.txt  fadR_regs.csv  fadR_regs_intervened.csv  fadR_sergio_df_clean.csv  fadR_sergio_df_clean_intervened.csv  fadR_sergio_df_noise.csv  fadR_sergio_df_noise_intervened.csv  fadR_targets.csv  fadR_targets_intervened.csv  linear_models_in_pyro.ipynb  network_model.xml  performance_comparison.ipynb  pyciemss_test.ipynb  small_toy_model.xml  technical_noise_notebook.ipynb  test_dag.xml  test_dag_updated.xml  test_data.csv  test_eqns_and_params_2_bins.txt  test_graph_2_bins.graphml  test_network_model.json  (+13 more)
notebooks/Ecoli_Analysis_Notebooks/: Biology_Analysis.ipynb  Cyclic_SingleDoor_Analysis.ipynb  Dual_Regulator_Analysis.ipynb  Ecoli_Identifiability_Analysis.ipynb  Ecoli_Identifiability_final.ipynb  Final_Analysis_NotebookEcoli.ipynb  Final_Analysis_NotebookEcoli_1000.ipynb  Full_Ecoli_Analysis.ipynb  Identifiability_Analysis.ipynb  Perturbation_Optimization.ipynb  SCC_Perturbation_Analysis.ipynb  comparison_summary.json  complete_comparison_results.csv  coverage_matrix.csv  csd_break_results.csv  csd_break_results_full.csv  csd_break_summary.json  csd_break_summary_full.json  csd_identifiable_edges.csv  csd_nonident_diagnosis.csv  csd_recovery_edges_n10_k3.csv  csd_recovery_edges_n5_k6.csv  csd_recovery_n10_k3.csv  csd_recovery_n5_k6.csv  csd_recovery_summary.json  csd_rescue_results.csv  csd_rescue_summary.json  csd_results.csv  csd_summary.json  cycle_breaking_analysis.csv  cycle_vs_coverage_ranking.csv  ecoli_valid_pairs.csv  nomination_k02.csv  nomination_k20.csv  nomination_min_cover.csv  phase2_checkpoint.json  phase3_checkpoint.json  residual_cluster_sizes.csv  residual_scc_summary.csv  scc_perturb_job.json  (+9 more)
notebooks/causality_workshop_2025/: nocap_tutorial.ipynb  tyrR_filtered.gml
notebooks/ecoli/: All-instances-of-RNAs-in-Escherichia-coli-K-12-substr.-MG1655.txt  FadR_all_ancestors_equations_1_bin.txt  FadR_all_ancestors_equations_3_bins.txt  FadR_all_ancestors_graph_1_bin.graphml  FadR_all_ancestors_graph_3_bins.graphml  FadR_all_ancestors_regs_1_bin.csv  FadR_all_ancestors_regs_3_bins.csv  FadR_all_ancestors_targets_1_bin.csv  FadR_all_ancestors_targets_3_bins.csv  FadR_network.gexf  FadR_network_all.gexf  FadR_regs_all.txt  FadR_targets_all.txt  LacI_all_ancestors_equations_1_bin.txt  LacI_all_ancestors_equations_3_bins.txt  LacI_all_ancestors_gene_expression_3_bins.csv  LacI_all_ancestors_graph_3_bins.graphml  LacI_all_ancestors_regs_1_bin.csv  LacI_all_ancestors_regs_3_bins.csv  LacI_all_ancestors_targets_1_bin.csv  LacI_all_ancestors_targets_3_bins.csv  LacI_network.gexf  LacI_network_all.gexf  LacI_regs.csv  LacI_regs_all.txt  LacI_targets.csv  LacI_targets_all.txt  TyrR_all_ancestors_equations_1_bin.txt  TyrR_all_ancestors_equations_3_bins.txt  TyrR_all_ancestors_gene_expression_3_bins.csv  TyrR_all_ancestors_graph_3_bins.graphml  TyrR_all_ancestors_regs_1_bin.csv  TyrR_all_ancestors_regs_3_bins.csv  TyrR_all_ancestors_targets_1_bin.csv  TyrR_all_ancestors_targets_3_bins.csv  TyrR_network.gexf  TyrR_regs.csv  (+38 more)
scripts/: add_docstrings.py  analyze_csd_break.py  build_break_coverage_figure.py  build_coverage_matrix.py  build_csd_notebook.py  check_csd_progress.sh  check_failures.py  check_residual_timeouts.py  classify_scc_states.py  clear_unident_shards.py  count_timeout_same_scc.py  count_timeouts.py  coverage_common.py  coverage_prepare.py  coverage_reduce.py  coverage_worker.py  csd_break_gather.py  csd_break_prepare.py  csd_break_worker.py  csd_calibrate_prepare.py  csd_calibrate_report.py  csd_diagnose_nonident.py  csd_identified_edges.py  csd_recovery_bank.py  csd_rescue_gather.py  csd_rescue_prepare.py  csd_rescue_worker.py  csd_scc_residual_analysis.py  cyclic_single_door_classify.py  cyclic_single_door_gather.py  diagnose_phase_a.py  extract_timeout_cohort.py  fix_notebook_phrasing.py  fix_ruff_errors.py  fix_ruff_errors2.py  list_scc_tasks.py  patch_csd_scc_residual_notebook.py  patch_csd_timeout_note.py  patch_notebook_part4.py  patch_scc_recovery_notebook.py  (+33 more)
tests/: __init__.py  simple_regulation_network.txt  test.dag  test_build_coverage_matrix.py  test_build_coverage_matrix_axiomander.py  test_build_coverage_matrix_hypothesis.py  test_coverage_common.py  test_coverage_common_axiomander.py  test_coverage_worker_axiomander.py  test_csd_break.py  test_csd_recovery_bank.py  test_csd_rescue.py  test_csd_scc_residual.py  test_cut_complete_axiomander.py  test_cyclic_single_door.py  test_cyclic_single_door_axiomander.py  test_cyclic_single_door_classify.py  test_graphml_to_semopy.py  test_oset_kernel_axiomander.py  test_perturbation_optimizer.py  test_perturbation_optimizer_axiomander.py  test_perturbation_optimizer_hypothesis.py  test_process.py  test_residual_scc_axiomander.py  test_scc_perturb_axiomander.py  test_scc_recovery_bank.py  test_scm.py  test_shard_io_axiomander.py  test_topk_simultaneous_axiomander.py  test_utility.py  test_version.py
workflow/: Snakefile  config.yaml
(+137 files in other folders)
