# See https://setuptools.readthedocs.io/en/latest/build_meta.html
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
extend-include = ["*.ipynb"]

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules
extend-select = [
    "F",   # pyflakes
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "C90", # mccabe
    "I",   # isort
    "UP",  # pyupgrade
    "D",   # pydocstyle
    "B",   # bugbear
    "S",   # bandit
    "T20", # print
    "N",   # pep8 naming
    "RUF", # ruff rules
    "C4",  # comprehensions
]
ignore = [
    "D105", # Missing docstring in magic method
    "E203", # Black conflicts with the following
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"src/nocap/version.py" = ["S603", "S607"]
"docs/source/conf.py" = ["ERA001"]
"notebooks/**/*.ipynb" = ["T201", "S101", "N811", "N802", "N803"]
# Tests: allow assert statements, uppercase CPD variable names, missing docstrings,
# bare except-pass patterns, assert False idiom, and dict() constructor
"tests/**/*.py" = ["S101", "N806", "N802", "N803", "D101", "D102", "D103", "D205", "D400", "B011", "B007", "S110", "C408", "C414", "RUF005"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.isort]
relative-imports-order = "closest-to-furthest"
known-third-party = ["tqdm"]
known-first-party = ["nocap", "tests"]

[tool.ruff.format]
docstring-code-format = true

[project]
name = "nocap"
version = "0.1.0"
description = "Network Optimization and Causal Analysis of Petrurb-seq"
authors = [
    {name = "August George", email = "30163079+augeorge@users.noreply.github.com"},
    {name = "August George", email = "august.george@pnnl.gov"},
]
dependencies = [
    "click",
    "jupyter",
    "more_click",
    "more_itertools",
    "networkx",
    "numpy",
    "pandas",
    "pgmpy",
    "plotly",
    "pydot==2.0.0",
    "seaborn",
    "semopy>=2.3.11",
    "sympy",
    "torch",
    "tqdm",
    "y0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
keywords = ["snekpack", "cookiecutter"]
maintainers = [
    {name = "August George", email = "august.george@pnnl.gov"},
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Framework :: Pytest",
    "Framework :: Sphinx",
    "Framework :: tox",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/pnnl-compbio/nocap"
Downloads = "https://github.com/pnnl-compbio/nocap/releases"
Tracker = "https://github.com/pnnl-compbio/nocap/issues"
Source = "https://github.com/pnnl-compbio/nocap"
Documentation = "https://nocap.readthedocs.io"

[project.optional-dependencies]
tests = [
    "coverage",
    "pytest",
]
docs = [
    "sphinx",
    "sphinx-click",
    "sphinx-rtd-theme",
    "sphinx_automodapi",
]

[project.scripts]
nocap = "nocap.cli:main"

##########################
# Coverage Configuration #
##########################
[tool.coverage.run]
branch = true
source = ["nocap"]
omit = ["tests/*", "docs/*"]

[tool.coverage.paths]
source = [
    "src/nocap",
    ".tox/*/lib/python*/site-packages/nocap",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "def __str__",
    "def __repr__",
]

######################
# Doc8 Configuration #
######################
[tool.doc8]
max-line-length = 120
